[gd_scene load_steps=6 format=2]

[ext_resource path="res://environment/items/nugget/nuggets.png" type="Texture" id=1]
[ext_resource path="res://environment/items/nugget/GoldenNugget.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
bounce = 0.5

[sub_resource type="GDScript" id=2]
script/source = "extends Sprite

func _ready():
	frame = randi() % hframes
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[node name="GoldenNugget" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
mode = 2
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
min_speed = 15.0
spread = 50.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
hframes = 5
script = SubResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -1 )
rect = Rect2( -2, -1, 4, 2 )
__meta__ = {
"_editor_description_": "Permet de supprimer les pépites qui pourraient sortir de l'écran par un bug de collision, afin de ne pas bloquer les nains dans l'état de pickup"
}
[connection signal="body_entered" from="." to="." method="_on_GoldenNugget_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
